# PICUSim

./: .dockerignore  .gitignore  .zenodo.json  AUTHORS.md  CHANGELOG.md  CHANGELOG_v1.12-alpha.md  CHANGELOG_v1.13-alpha.md  CHANGELOG_v1.15-alpha.md  CHANGELOG_v1.18-alpha.md  CHANGELOG_v1.19-alpha.md  CHANGELOG_v1.20-alpha.md  CHANGELOG_v1.21-alpha.md  CHANGELOG_v1.22-alpha.md  CHANGELOG_v1.22.1-alpha.md  CHANGELOG_v1.22.2-alpha.md  CHANGELOG_v1.22.3-alpha.md  CHANGELOG_v1.23-alpha.md  CHANGELOG_v1.23.1-alpha.md  CHANGELOG_v1.23.2-alpha.md  CHANGELOG_v1.23.3-alpha.md  CHANGELOG_v1.24-alpha.md  CHANGELOG_v1.25-alpha.md  CHANGELOG_v1.26-alpha.md  CHANGELOG_v2.0-alpha.md  CHANGELOG_v2.1-alpha.md  CHANGELOG_v2.2-alpha.md  CHANGELOG_v2.3-alpha.md  CHANGELOG_v2.4-alpha.md  CHANGELOG_v2.5-alpha.md  CHANGELOG_v2.6-alpha.md  CHANGELOG_v2.7-alpha.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  DISCLAIMER_NOT_FOR_CLINICAL_USE.md  Dockerfile  HF4_CORRECTIONS_REPORT.md  HOTFIX_HF1_HF2_HF3_REPORT.md  LICENSE  LICENSE_PENDING.md  (+51 more)
api/: action_router.py  debrief.py  instructor.py  methods_appendix.py  performance.py  reproducibility.py  scenario_authoring.py  schemas.py  server.py  session.py  session_io.py  state_profiles.py  training.py
apps/: streamlit_app.py
benchmarks/: expected_ranges.yaml
core/: __init__.py  airway_events.py  base_module.py  bus.py  cardiac_arrest_events.py  cardiovascular_scaling.py  dependencies.py  engine.py  events.py  failure_to_rescue.py  profile_scaling.py  profiles.py  quality.py  recovery_engine.py  scenario.py  scenario_engine_v2.py  scenario_timing.py
data/: acute_events_v0.43.yaml  airway_decision_scenario_pack_v1.25.yaml  airway_events_v1.24.yaml  airway_interface_spec_v1.23.yaml  artificial_airway_ett_spec_v1.23.3.yaml  causal_trace_specs_v0.40.yaml  counterfactual_specs_v0.42.yaml  crrt_drug_clearance_v1.10.yaml  dose_response_specs_v0.32.yaml  dose_response_specs_v0.37.yaml  dt_convergence_specs_v0.33.yaml  dt_convergence_specs_v0.38.yaml  emergency_debrief_spec_v1.26.yaml  epals_5h_scenario_pack_v1.22.1.yaml  epals_5t_scenario_pack_v1.22.2.yaml  epals_debrief_spec_v1.22.3.yaml  epals_reversible_causes_v1.22.yaml  model_registry.yaml  (+43 more)
(+513 files in other folders)
